--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
-#000000
-#Free choice extra assignment bundle E
+
+# Free choice extra assignment bundle E
+
+This is a **Github Pages** / *markdown* basic syntax test!
+
+## Testing of features
+
+`#000000`
+
+[Hyvä biisi](https://www.youtube.com/watch?v=N4UX6YrfPlo)
+
+______________
+
+### Muita hyviä biisejä
+
+______________
+
++ Electric Avenue
++ Estonian Stallion
++ (Sittin' On) the Dock of the Bay
+
+______________
+
+:+1: :beaver:
